flex wrap, solves all of life's problem
new line after more than 3 event

--- a/src/Components/Events/Event.module.css
+++ b/src/Components/Events/Event.module.css
@@ -4,8 +4,9 @@
     transition: 0.3s ease-in-out;
     background-color: white;
     min-width: 250px;
-    max-width: 500px;
+    width: 300px;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .card:hover {
